--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,10 @@
-name: test
+name: Stokka App Tests
 
-on: workflow_dispatch
+#on: workflow_dispatch
+on: 
+  pull_request:
+    branches:
+      - main
 
 env:
   FOUNDRY_PROFILE: ci
